fix post-header>p to text-align center

--- a/src/assets/_scss/partials/_post-single.scss
+++ b/src/assets/_scss/partials/_post-single.scss
@@ -8,7 +8,11 @@
   position: relative;
 }
 
-.post-header {}
+.post-header {
+  > p {
+    text-align: center;
+  }
+}
 
 .post-meta-list {
   @extend .post-item-meta-list;
